--- a/sound.conf
+++ b/sound.conf
@@ -10,3 +10,6 @@ sound_volume = 50
 music_state_state1 = state1.mp3
 music_state_state2 = state2.mp3
 music_state_finalstate = state3.mp3
+
+## Fade out time
+fadeout = 1
