--- a/sound.conf
+++ b/sound.conf
@@ -7,7 +7,7 @@ music_volume = 50
 sound_volume = 80
 
 ## Music backgrounds for the different stages
-music_state_state1 = state1.mp3
+music_state_state1 = hint1.ogg
 music_state_state2 = state2.mp3
 music_state_finalstate = state3.mp3
 
